alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 } 
 body {
+  position: relative;
+  width: 100%;
   height: 100%;
   background-size: cover;
+  overflow: hidden;
 }
