--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400&display=swap');
 
-.container{
-padding: 10px;
-}
+
+
+
 
 .weatherBar{
-width: 100%;
-float: left;
+/* width: 100%; */
 display: flex;
 justify-content: center;
 padding: 0px;
 }
 
+.card{
+display: flex;
+justify-content: center;
+}
+
 .weatherCard{
 font-family: 'Ubuntu', sans-serif;
 margin: 5px;
-width: calc(100%/7);
+width: calc(100%/8);
 height: 180%;
 display: flex;
 flex-direction: column;
@@ -131,9 +135,7 @@ background-color: rgb(255 255 255 / 80%);
 }
 
 
-.card{
-display: flex;
-}
+
 
 .sunny{
 background:url("/public/assets/sunny.png");
